--- a/app.json
+++ b/app.json
@@ -23,10 +23,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      [
-        
-      ]
+      "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
