--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "linq-to-typescript": "^11.1.0",
     "node-fetch": "^3.3.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -41,7 +42,9 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "13.12.2",
+    "ts-generic-collections-linq": "^1.0.7",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
