--- a/package.json
+++ b/package.json
@@ -15,21 +15,26 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
-    "expo": "~52.0.11",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
+    "expo": "~52.0.14",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.5",
     "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.9",
+    "expo-router": "~4.0.11",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.4",
+    "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
     "linq-to-typescript": "^11.1.0",
     "node-fetch": "^3.3.2",
@@ -38,13 +43,15 @@
     "react-native": "0.76.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "^15.10.0",
+    "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "ts-generic-collections-linq": "^1.0.7",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "ts-generic-collections-linq": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
