--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "react-native": "0.76.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-charts": "^1.4.47",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "6.5.1",
+    "react-native-pie-chart": "^3.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
